Fixed a spacing issue

--- a/src/app/show-name/show-name.component.css
+++ b/src/app/show-name/show-name.component.css
@@ -1,6 +1,6 @@
 .app-showName {
   width: 50%;
-  margin: 2em;
+  margin-top: 1em;
   align-self: center;
   text-align: center;
 }
